--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -86,19 +86,30 @@ textarea {
   cursor: pointer;
 }
 
-.button:focus{
+.button:focus {
   outline: none;
 }
 
-.logout{
+.logout {
   background-color: tomato;
 }
 
-.login{
+.login {
   background-color: teal;
   margin-right: 10px;
 }
 
-.register{
+.register {
   background-color: slateblue;
+}
+
+.search-container {
+  position: absolute;
+  top: .8rem;
+  right: 13rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  border: none;
+  padding-left: 5px;
 }
